--- a/classes/classes.html
+++ b/classes/classes.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-07 Thu 15:01 -->
+<!-- 2023-09-08 Fri 13:45 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Campaign Classes</title>
@@ -202,15 +202,15 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org8d84e73">1. Bard</a></li>
-<li><a href="#orgf794534">2. Druid</a></li>
-<li><a href="#orge2c9ffb">3. Wizard</a></li>
-<li><a href="#org01f49b5">4. Paladin</a></li>
-<li><a href="#orga21c1c9">5. Sorcerer</a></li>
-<li><a href="#orgb0a29d6">6. Prophet</a></li>
-<li><a href="#orgbb692b6">7. Merchant</a></li>
-<li><a href="#org8c4a0f3">8. Warrior</a></li>
-<li><a href="#orgf7c7135">9. Rogue</a></li>
+<li><a href="#org04befcf">1. Bard</a></li>
+<li><a href="#org767e5a0">2. Druid</a></li>
+<li><a href="#org50e99a5">3. Wizard</a></li>
+<li><a href="#org757557c">4. Paladin</a></li>
+<li><a href="#orgcea0403">5. Sorcerer</a></li>
+<li><a href="#orgdaa95eb">6. Prophet</a></li>
+<li><a href="#orgfd00c87">7. Merchant</a></li>
+<li><a href="#orgebf52ef">8. Warrior</a></li>
+<li><a href="#orgd8c661a">9. Rogue</a></li>
 </ul>
 </div>
 </div>
@@ -220,72 +220,72 @@
 </p>
 </div>
 <hr />
-<div id="outline-container-org8d84e73" class="outline-2">
-<h2 id="org8d84e73"><span class="section-number-2">1.</span> <a href="bard.html#ID-8bb9a08a-97c0-4231-a002-ad7dcf83e4d8">Bard</a></h2>
+<div id="outline-container-org04befcf" class="outline-2">
+<h2 id="org04befcf"><span class="section-number-2">1.</span> <a href="bard.html#ID-8bb9a08a-97c0-4231-a002-ad7dcf83e4d8">Bard</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 Support the rest of the party using your talents, or your &ldquo;talents&rdquo;. Uses unique class abilities and spells, mostly using the <b>Charisma</b> stat
 </p>
 </div>
 </div>
-<div id="outline-container-orgf794534" class="outline-2">
-<h2 id="orgf794534"><span class="section-number-2">2.</span> <a href="druid.html#ID-8bb9a08a-9770-4231-a002-ad7dcf83e4d8">Druid</a></h2>
+<div id="outline-container-org767e5a0" class="outline-2">
+<h2 id="org767e5a0"><span class="section-number-2">2.</span> <a href="druid.html#ID-8bb9a08a-9770-4231-a002-ad7dcf83e4d8">Druid</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 Work with the forces of nature to pursue your goals. Uses magic and alchemy primarily, cast using <b>Charisma</b> and <b>Wisdom</b>
 </p>
 </div>
 </div>
-<div id="outline-container-orge2c9ffb" class="outline-2">
-<h2 id="orge2c9ffb"><span class="section-number-2">3.</span> <a href="wizard.html#ID-3e1b93b3-f1ad-4148-bb16-5313b376a707">Wizard</a></h2>
+<div id="outline-container-org50e99a5" class="outline-2">
+<h2 id="org50e99a5"><span class="section-number-2">3.</span> <a href="wizard.html#ID-3e1b93b3-f1ad-4148-bb16-5313b376a707">Wizard</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Become a powerful channel of the magical elements. Use spells primarily, cast using the character&rsquo;s <b>Intelligence</b> stat.
 </p>
 </div>
 </div>
-<div id="outline-container-org01f49b5" class="outline-2">
-<h2 id="org01f49b5"><span class="section-number-2">4.</span> <a href="paladin.html#ID-940552be-47cf-48ff-8ca0-8c2b7f629052">Paladin</a></h2>
+<div id="outline-container-org757557c" class="outline-2">
+<h2 id="org757557c"><span class="section-number-2">4.</span> <a href="paladin.html#ID-940552be-47cf-48ff-8ca0-8c2b7f629052">Paladin</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Defend the faith and the faithful with the might of your god. Uses heavy weapons and some spellcasting.
 </p>
 </div>
 </div>
-<div id="outline-container-orga21c1c9" class="outline-2">
-<h2 id="orga21c1c9"><span class="section-number-2">5.</span> <a href="sorcerer.html#ID-f2323133-e17d-4cff-86db-415b72e6d42e">Sorcerer</a></h2>
+<div id="outline-container-orgcea0403" class="outline-2">
+<h2 id="orgcea0403"><span class="section-number-2">5.</span> <a href="sorcerer.html#ID-f2323133-e17d-4cff-86db-415b72e6d42e">Sorcerer</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 Manipulate the world around you in a manner of your choosing with latent powers imbued in the user. Uses spells primarily, cast using Wisdom.
 </p>
 </div>
 </div>
-<div id="outline-container-orgb0a29d6" class="outline-2">
-<h2 id="orgb0a29d6"><span class="section-number-2">6.</span> <a href="prophet.html#ID-3ffd4641-5357-4b49-822a-cc23c9b9e627">Prophet</a></h2>
+<div id="outline-container-orgdaa95eb" class="outline-2">
+<h2 id="orgdaa95eb"><span class="section-number-2">6.</span> <a href="prophet.html#ID-3ffd4641-5357-4b49-822a-cc23c9b9e627">Prophet</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 Chosen vessel of a particular God. Prophets do not know which God they channel at the beginning of the game. The prophet has a primary mission of discovering which God they are aligned to by learning about the religious system of the world.
 </p>
 </div>
 </div>
-<div id="outline-container-orgbb692b6" class="outline-2">
-<h2 id="orgbb692b6"><span class="section-number-2">7.</span> <a href="merchant.html#ID-4d617f28-180d-4610-ad0e-a280e5c6b117">Merchant</a></h2>
+<div id="outline-container-orgfd00c87" class="outline-2">
+<h2 id="orgfd00c87"><span class="section-number-2">7.</span> <a href="merchant.html#ID-4d617f28-180d-4610-ad0e-a280e5c6b117">Merchant</a></h2>
 <div class="outline-text-2" id="text-7">
 <p>
 Buy low, sell high! Focus on acquiring as much money as possible; making trades and building a reputation across the cities of the world.
 </p>
 </div>
 </div>
-<div id="outline-container-org8c4a0f3" class="outline-2">
-<h2 id="org8c4a0f3"><span class="section-number-2">8.</span> <a href="warrior.html#ID-1846aace-7d40-41af-95e6-4a4d72044af5">Warrior</a></h2>
+<div id="outline-container-orgebf52ef" class="outline-2">
+<h2 id="orgebf52ef"><span class="section-number-2">8.</span> <a href="warrior.html#ID-1846aace-7d40-41af-95e6-4a4d72044af5">Warrior</a></h2>
 <div class="outline-text-2" id="text-8">
 <p>
 Hack, slash, pummel, and dominate your enemies on the way to victory. Uses weapons primarily.
 </p>
 </div>
 </div>
-<div id="outline-container-orgf7c7135" class="outline-2">
-<h2 id="orgf7c7135"><span class="section-number-2">9.</span> <a href="rogue.html#ID-0b7f7671-c4de-41e9-b199-4a9ceb6352d2">Rogue</a></h2>
+<div id="outline-container-orgd8c661a" class="outline-2">
+<h2 id="orgd8c661a"><span class="section-number-2">9.</span> <a href="rogue.html#ID-0b7f7671-c4de-41e9-b199-4a9ceb6352d2">Rogue</a></h2>
 <div class="outline-text-2" id="text-9">
 <p>
 Sneak, steal, deceive, and assassinate those who oppose your endeavors. Attack using <b>Dexterity</b> and <b>Charisma</b>.
@@ -297,7 +297,7 @@ Sneak, steal, deceive, and assassinate those who oppose your endeavors. Attack u
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-03 Mon 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-09-07 Thu 15:01</p>
+<p class="date">Created: 2023-09-08 Fri 13:45</p>
 </div>
 </body>
 </html>
