--- a/classes/subclasses/fire_wizard.html
+++ b/classes/subclasses/fire_wizard.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-07 Thu 15:34 -->
+<!-- 2023-09-08 Fri 14:08 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Fire Wizard 🔥</title>
@@ -202,11 +202,11 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org6772102">1. Wizard Traits</a></li>
-<li><a href="#orgb0b208f">2. Level 1 Spells</a></li>
-<li><a href="#org34eb14f">3. Level 2 Spells</a></li>
-<li><a href="#orgb8d5dc7">4. Level 3 Spells</a></li>
-<li><a href="#org5cbb4fc">5. Level 4 Spells</a></li>
+<li><a href="#orgb4ad606">1. Wizard Traits</a></li>
+<li><a href="#orgb29b50a">2. Level 1</a></li>
+<li><a href="#org949701b">3. Level 2 (5+)</a></li>
+<li><a href="#org6210786">4. Level 3 Spells (11+)</a></li>
+<li><a href="#org74897ad">5. Level 4 Spells (15+)</a></li>
 </ul>
 </div>
 </div>
@@ -220,16 +220,16 @@
 Even though they require an existing source of fire for the first few levels. Until the Pyromancer trait is learned (or the Cursed Fire spell), they will often have to expend a turn to light a fire or mak sure a fire exists to be useful in combat.
 </p>
 
-<div id="outline-container-org6772102" class="outline-2">
-<h2 id="org6772102"><span class="section-number-2">1.</span> Wizard Traits</h2>
+<div id="outline-container-orgb4ad606" class="outline-2">
+<h2 id="orgb4ad606"><span class="section-number-2">1.</span> Wizard Traits</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><span class="underline"><i>Fire Immunity</i></span>: Become immune to fire damage for the rest of the game. You will still take half damage if the fire damage is paired with another type of damage.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgb0b208f" class="outline-2">
-<h2 id="orgb0b208f"><span class="section-number-2">2.</span> Level 1 Spells</h2>
+<div id="outline-container-orgb29b50a" class="outline-2">
+<h2 id="orgb29b50a"><span class="section-number-2">2.</span> Level 1</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><span class="underline"><b>Sear</b></span>: Heat a non-living object to 100 degrees Celsius by laying a hand on it. The object stays at this temperature for one minute and cools down to its normal temperature over the next 5 minutes. This spell can destroy objects. Creatures who touch the object take 2d8 fire damage if heated to full temperature and 1d8 damage in the cooldown period.</li>
@@ -238,8 +238,8 @@ Even though they require an existing source of fire for the first few levels. Un
 </ul>
 </div>
 </div>
-<div id="outline-container-org34eb14f" class="outline-2">
-<h2 id="org34eb14f"><span class="section-number-2">3.</span> Level 2 Spells</h2>
+<div id="outline-container-org949701b" class="outline-2">
+<h2 id="org949701b"><span class="section-number-2">3.</span> Level 2 (5+)</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><span class="underline"><b>Ignite</b></span>: Roll to hit. On success, set a living creature within 50 feet on fire. They take 2d12 fire damage per turn until they put the fire out.</li>
@@ -249,8 +249,8 @@ Even though they require an existing source of fire for the first few levels. Un
 </ul>
 </div>
 </div>
-<div id="outline-container-orgb8d5dc7" class="outline-2">
-<h2 id="orgb8d5dc7"><span class="section-number-2">4.</span> Level 3 Spells</h2>
+<div id="outline-container-org6210786" class="outline-2">
+<h2 id="org6210786"><span class="section-number-2">4.</span> Level 3 Spells (11+)</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><span class="underline"><b>Inferno</b></span>: Cast a whirlwind of fire (20ft radius) in any location in a 150ft radius. The inferno lasts for 3 turns and deals 3d10 fire damage per turn to all creatures, allies included. All people affected may roll a constitution save to take half damage. No roll to hit required.</li>
@@ -258,12 +258,12 @@ Even though they require an existing source of fire for the first few levels. Un
 </ul>
 </div>
 </div>
-<div id="outline-container-org5cbb4fc" class="outline-2">
-<h2 id="org5cbb4fc"><span class="section-number-2">5.</span> Level 4 Spells</h2>
+<div id="outline-container-org74897ad" class="outline-2">
+<h2 id="org74897ad"><span class="section-number-2">5.</span> Level 4 Spells (15+)</h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><span class="underline"><b>Damnation</b></span>: Cast one creature (demigods included) of your choosing into Hell. While there, they take a extreme amount of damage (depending on the current state of Hell), see unspeakable horrors, and come back with the Fear, Horror, Curse, and Damned debuffs. Add an additional +5 on roll to hit.</li>
-<li><span class="underline"><b>Meteor</b></span>: Summon a massive meteor to land in a location that you can see. Most terrain (except that protected by strong or divine magic) is destroyed by the meteor. Allies take damage from the meteor as well. All targets taking damage from the meteor may roll a constition saving throw to take 1/2 damage. No roll to hit is required.
+<li><span class="underline"><b>Meteor</b></span>: Summon a massive meteor to land in a location that you can see. Most terrain (except that protected by strong or divine magic) is destroyed by the meteor. Allies take damage from the meteor as well. All targets taking damage from the meteor may roll a CON saving throw to take 1/2 damage. No roll to hit is required.
 <ul class="org-ul">
 <li>1000-foot radius: 15d12 fire / force damage. Become crushed under the meteor and become unable to move until excavated.</li>
 <li>500-foot radius: 10d12 fire / force damage</li>
@@ -277,7 +277,7 @@ Even though they require an existing source of fire for the first few levels. Un
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-12 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-09-07 Thu 15:34</p>
+<p class="date">Created: 2023-09-08 Fri 14:08</p>
 </div>
 </body>
 </html>
