--- a/classes/subclasses/radiant_wizard.html
+++ b/classes/subclasses/radiant_wizard.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-07 Thu 16:20 -->
+<!-- 2023-09-08 Fri 14:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Radiant Wizard</title>
@@ -202,11 +202,11 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org7f4b1f6">1. Wizard Traits</a></li>
-<li><a href="#org604c4a3">2. Level 1 Spells</a></li>
-<li><a href="#org1c13c40">3. Level 2 Spells</a></li>
-<li><a href="#orgcb65381">4. Level 3 Spells</a></li>
-<li><a href="#org4e09faf">5. Level 4 Spells</a></li>
+<li><a href="#org21ea7d7">1. Wizard Traits</a></li>
+<li><a href="#org50a1ab1">2. Level 1</a></li>
+<li><a href="#orgd808659">3. Level 2 (5+)</a></li>
+<li><a href="#org33a97dc">4. Level 3 (11+)</a></li>
+<li><a href="#org42158e8">5. Level 4 (15+)</a></li>
 </ul>
 </div>
 </div>
@@ -220,8 +220,8 @@
 Radiant Wizards operate in the middle ground between Wizard and Bard, occasionally acting as a healer for the rest of the party. However, they have the capability to deal extreme amounts of damage under specific conditions. They can grant buffs and debuffs to allies and enemies, but are limited in their abilities against Good NPCs.
 </p>
 
-<div id="outline-container-org7f4b1f6" class="outline-2">
-<h2 id="org7f4b1f6"><span class="section-number-2">1.</span> Wizard Traits</h2>
+<div id="outline-container-org21ea7d7" class="outline-2">
+<h2 id="org21ea7d7"><span class="section-number-2">1.</span> Wizard Traits</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><span class="underline"><i>Ass Kisser</i></span>: Regardless of your actions in the campaign, you will be considered Good creature by everyone you encounter, including the gods. Good for you.</li>
@@ -229,18 +229,18 @@ Radiant Wizards operate in the middle ground between Wizard and Bard, occasional
 </ul>
 </div>
 </div>
-<div id="outline-container-org604c4a3" class="outline-2">
-<h2 id="org604c4a3"><span class="section-number-2">2.</span> Level 1 Spells</h2>
+<div id="outline-container-org50a1ab1" class="outline-2">
+<h2 id="org50a1ab1"><span class="section-number-2">2.</span> Level 1</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><span class="underline"><b>Bless</b></span>: Grant an ally the Blessed buff and heal them for 1d8 health. This cannot revive them from the dead.</li>
 <li><span class="underline"><b>Blind</b></span>: Deal 1d8 radiant damage to all enemies within 50ft that can see you. All effected enemies get the Blinded debuff for two turns. <i>Once blinded, an enemy cannot be blinded again by this spell in the same combat encounter</i>.</li>
-<li><span class="underline"><b>Divine Guidance</b></span>: If pursuing a goal the DM determines to be Good in nature, recieve a minor bit of advice, healing for 1d8 health, or the answer to a minor dilemma. <i>Can only be cast once per long rest</i>.</li>
+<li><span class="underline"><b>Divine Guidance</b></span>: If pursuing a goal the DM determines to be Good in nature, receive a minor bit of advice, healing for 1d8 health, or the answer to a minor dilemma. <i>Can only be cast once per long rest</i>.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org1c13c40" class="outline-2">
-<h2 id="org1c13c40"><span class="section-number-2">3.</span> Level 2 Spells</h2>
+<div id="outline-container-orgd808659" class="outline-2">
+<h2 id="orgd808659"><span class="section-number-2">3.</span> Level 2 (5+)</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><span class="underline"><b>Grace</b></span>: Heal 2 allies below half health to half health, or revive one unconscious ally to 5 health. You do not need to roll to hit for this spell.</li>
@@ -249,21 +249,21 @@ Radiant Wizards operate in the middle ground between Wizard and Bard, occasional
 </ul>
 </div>
 </div>
-<div id="outline-container-orgcb65381" class="outline-2">
-<h2 id="orgcb65381"><span class="section-number-2">4.</span> Level 3 Spells</h2>
+<div id="outline-container-org33a97dc" class="outline-2">
+<h2 id="org33a97dc"><span class="section-number-2">4.</span> Level 3 (11+)</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><span class="underline"><b>Summon Angel</b></span>: Summon an Angel to fight in combat for you for five turns. The Angel had 50HP, 15 AC, and deals 3d8 damage on hit. The Angel will only attack Evil or Neutral enemies.</li>
-<li><span class="underline"><b>Shackles</b></span></li>
+<li><span class="underline"><b>Shackles</b></span>: Bind a target to the ground with blessed shackles. The target must make a CON saving throw to escape the shackles. THe target takes 2d6 radiant damage from the shackles until they escape.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org4e09faf" class="outline-2">
-<h2 id="org4e09faf"><span class="section-number-2">5.</span> Level 4 Spells</h2>
+<div id="outline-container-org42158e8" class="outline-2">
+<h2 id="org42158e8"><span class="section-number-2">5.</span> Level 4 (15+)</h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><span class="underline"><b>Beatification</b></span>: Send a creature of your choosing to Heaven. They return from Heaven fully healed, fully rested, and with a variety of buffs. No roll is necessary to perform this spell. <i>This spell has two charges, and must be recharged with a University Ritual</i>.</li>
-<li><span class="underline"><b>Judgment Day</b></span>: All Evil and Neutral creatures in the vicinity will have their lives judged by the Gods. If they success in judgment, they will recieve the Blessed buff and are healed to half health. If they fail judgment, they take 15d10 radiant damage.</li>
+<li><span class="underline"><b>Judgment Day</b></span>: All Evil and Neutral creatures in the vicinity will have their lives judged by the Gods. If they success in judgment, they will receive the Blessed buff and are healed to half health. If they fail judgment, they take 15d10 radiant damage.</li>
 </ul>
 </div>
 </div>
@@ -271,7 +271,7 @@ Radiant Wizards operate in the middle ground between Wizard and Bard, occasional
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-12 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-09-07 Thu 16:20</p>
+<p class="date">Created: 2023-09-08 Fri 14:06</p>
 </div>
 </body>
 </html>
