--- a/classes/subclasses/storm_wizard.html
+++ b/classes/subclasses/storm_wizard.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-07-30 Sun 20:26 -->
+<!-- 2023-09-08 Fri 14:09 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Storm Wizard 🌩</title>
@@ -202,11 +202,11 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org9ae4fc6">1. Elemental Traits</a></li>
-<li><a href="#org99c699e">2. Level 1 Spells</a></li>
-<li><a href="#orgf775c01">3. Level 2 Spells</a></li>
-<li><a href="#orgfe7ae39">4. Level 3 Spells</a></li>
-<li><a href="#org82a291a">5. Level 4 Spells</a></li>
+<li><a href="#org003e989">1. Elemental Traits</a></li>
+<li><a href="#org6d888fb">2. Level 1</a></li>
+<li><a href="#org7224a86">3. Level 2 (5+)</a></li>
+<li><a href="#org3e64a13">4. Level 3 (11+)</a></li>
+<li><a href="#org7523d0e">5. Level 4 (15+)</a></li>
 </ul>
 </div>
 </div>
@@ -220,84 +220,59 @@
 While storm wizards lack the sheer damage output capabilities of other wizards, Storm Wizards operate using ice and lightning damage. This gives them the flexibility to counter different immunities that a target may posses.
 </p>
 
-<div id="outline-container-org9ae4fc6" class="outline-2">
-<h2 id="org9ae4fc6"><span class="section-number-2">1.</span> Elemental Traits</h2>
+<div id="outline-container-org003e989" class="outline-2">
+<h2 id="org003e989"><span class="section-number-2">1.</span> Elemental Traits</h2>
 <div class="outline-text-2" id="text-1">
-<p>
-<span class="underline"><b>Ice Immunity</b></span>: Become immune to ice damage for the rest of the game. You will take half damage if the ice damage is paired with another type of damage.
-</p>
-
-<p>
-<span class="underline"><b>Ice Immunity</b></span>: Become immune to lightning damage for the rest of the game. You will take half damage if the lightning damage is paired with another type of damage.
-</p>
-
-<p>
-<span class="underline"><b>Underwater Breathing</b></span>: You can breathe underwater. Grant one ally of your choice the ability to breath underwater while you are submerged in water. This ends when you exit the water.
-</p>
+<ul class="org-ul">
+<li><span class="underline"><i>Ice Immunity</i></span>: Become immune to ice damage for the rest of the game. You will take half damage if the ice damage is paired with another type of damage.</li>
+<li><span class="underline"><i>Ice Immunity</i></span>: Become immune to lightning damage for the rest of the game. You will take half damage if the lightning damage is paired with another type of damage.</li>
+<li><span class="underline"><i>Underwater Breathing</i></span>: You can breathe underwater. Grant one ally of your choice the ability to breath underwater while you are submerged in water. This ends when you exit the water.</li>
+</ul>
 </div>
 </div>
-<div id="outline-container-org99c699e" class="outline-2">
-<h2 id="org99c699e"><span class="section-number-2">2.</span> Level 1 Spells</h2>
+<div id="outline-container-org6d888fb" class="outline-2">
+<h2 id="org6d888fb"><span class="section-number-2">2.</span> Level 1</h2>
 <div class="outline-text-2" id="text-2">
-<p>
-<span class="underline"><b>Rainstorm</b></span>: It begins raining in a half-mile radius around the caster. This rainstorm may take up to five minutes to begin, depending on the caster&rsquo;s environment. Does not work in Hell.
-</p>
-
-<p>
-<span class="underline"><b>Freeze</b></span>: Roll to hit. On hit, freeze a living creature. While frozen, they cannot move, but can still cast spells and attack enemies within 5 feet. They must roll a constitution save to become unfrozen.
-</p>
-
-<p>
-<span class="underline"><b>Icicle Hand</b></span>: Transform your dominant hand into an icicle. You may stab people without fear of it breaking. The icicle deals 1d10 freeze / piercing damage. This lasts for three turns, and if you successfully stab the same enemy all three turns, they take an extra 2d6 freeze damage.
-</p>
+<ul class="org-ul">
+<li><span class="underline"><b>Rainstorm</b></span>: It begins raining in a half-mile radius around the caster. This rainstorm may take up to five minutes to begin, depending on the caster&rsquo;s environment. Does not work in Hell.</li>
+<li><span class="underline"><b>Freeze</b></span>: Roll to hit. On hit, freeze a living creature. While frozen, they cannot move, but can still cast spells and attack enemies within 5 feet. They must roll a constitution save to become unfrozen.</li>
+<li><span class="underline"><b>Icicle Hand</b></span>: Transform your dominant hand into an icicle. You may stab people without fear of it breaking. The icicle deals 1d10 freeze / piercing damage. This lasts for three turns, and if you successfully stab the same enemy all three turns, they take an extra 2d6 freeze damage.</li>
+</ul>
 </div>
 </div>
-<div id="outline-container-orgf775c01" class="outline-2">
-<h2 id="orgf775c01"><span class="section-number-2">3.</span> Level 2 Spells</h2>
+<div id="outline-container-org7224a86" class="outline-2">
+<h2 id="org7224a86"><span class="section-number-2">3.</span> Level 2 (5+)</h2>
 <div class="outline-text-2" id="text-3">
-<p>
-<span class="underline"><b>Lightning Bolt</b></span>: Roll to hit. On hit, summon a lightning bolt from the heavens to strike a target you can see. They take 3d8 lightning damage, and are stunned for one turn if they fail a constitution check.
-</p>
-
-<p>
-<span class="underline"><b>Electric Rain</b></span>: If it&rsquo;s raining, charge raindrops with electricity. Everyone in the rainstorm (allies included) takes 1d8 lightning damage per turn for 8 turns. <i>This spell cannot be canceled once cast</i>.
-</p>
-
-<p>
-<span class="underline"><b>Flood</b></span>: Create a wave of water to sweep through the area you designate. The wave begins in the first area out of your eyesight, and gains a foot in size for every 25 feet it travels. At a certain distance away you may be unable to control the size and/or damage of the spell, so use it wisely. <i>The flood deals half damage to the allies</i>.
-</p>
+<ul class="org-ul">
+<li><span class="underline"><b>Lightning Bolt</b></span>: Roll to hit. On hit, summon a lightning bolt from the heavens to strike a target you can see. They take 3d8 lightning damage, and are stunned for one turn if they fail a constitution check.</li>
+<li><span class="underline"><b>Electric Rain</b></span>: If it&rsquo;s raining, charge raindrops with electricity. Everyone in the rainstorm (allies included) takes 1d8 lightning damage per turn for 8 turns. <i>This spell cannot be canceled once cast</i>.</li>
+<li><span class="underline"><b>Flood</b></span>: Create a wave of water to sweep through the area you designate. The wave begins in the first area out of your eyesight, and gains a foot in size for every 25 feet it travels. At a certain distance away you may be unable to control the size and/or damage of the spell, so use it wisely. <i>The flood deals half damage to the allies</i>.</li>
+</ul>
 </div>
 </div>
-<div id="outline-container-orgfe7ae39" class="outline-2">
-<h2 id="orgfe7ae39"><span class="section-number-2">4.</span> Level 3 Spells</h2>
+<div id="outline-container-org3e64a13" class="outline-2">
+<h2 id="org3e64a13"><span class="section-number-2">4.</span> Level 3 (11+)</h2>
 <div class="outline-text-2" id="text-4">
-<p>
-<span class="underline"><b>Summon Store Elemental</b></span>: Use your action to summon a storm elemental to fight for you for 6 turns. It has 50 health, deals 2d8 damage on hit, and it has 15 AC. If it lands the killing blow to a target, it stays around for an additional three turns. The storm elemental can only be summoned if there is some sort of water nearby and the party is in combat.
-</p>
-
-<p>
-<span class="underline"><b>Tornado</b></span>: Create a tornado within a 20-foot radius that you are able to control for three turns. It deals 3d8 force damage per turn, but enemies can still avoid damage on a constitution saving throw. <i>If it is raining during the creation of the tornado, it deals 4d8 force damage instead</i>. You must concentrate to control the tornado so you cannot move from your position, and if your concentration is broken, it will vanish after the current turn.
-</p>
+<ul class="org-ul">
+<li><span class="underline"><b>Summon Store Elemental</b></span>: Use your action to summon a storm elemental to fight for you for 6 turns. It has 50 health, deals 2d8 damage on hit, and it has 15 AC. If it lands the killing blow to a target, it stays around for an additional three turns. The storm elemental can only be summoned if there is some sort of water nearby and the party is in combat.</li>
+<li><span class="underline"><b>Tornado</b></span>: Create a tornado within a 20-foot radius that you are able to control for three turns. It deals 3d8 force damage per turn, but enemies can still avoid damage on a constitution saving throw. <i>If it is raining during the creation of the tornado, it deals 4d8 force damage instead</i>. You must concentrate to control the tornado so you cannot move from your position, and if your concentration is broken, it will vanish after the current turn.</li>
+</ul>
 </div>
 </div>
-
-<div id="outline-container-org82a291a" class="outline-2">
-<h2 id="org82a291a"><span class="section-number-2">5.</span> Level 4 Spells</h2>
+<div id="outline-container-org7523d0e" class="outline-2">
+<h2 id="org7523d0e"><span class="section-number-2">5.</span> Level 4 (15+)</h2>
 <div class="outline-text-2" id="text-5">
-<p>
-<span class="underline"><b>Entomb</b></span>: Seal a creature within ice for the next month. This only takes effect if they fail a constitution saving throw (DC 18). During this time, they drop to one health, but do not die and are conscious of the events around them. Entomb instantly kills fire-based creatures. <i>Huge creatures cannot be entombed</i>.
-</p>
-
-<p>
-<span class="underline"><b>Hurricane</b></span>: Create a hurricane in any place that <i>you have been before</i>. The hurricane lasts for ten turns and deals d10 ice / force damage per turn to all people who fail a constitution saving throw. Its radius is 500 feet. If a creature is damaged by the hurricane twice in a row, they also take the preceding turn&rsquo;s damage.
-</p>
+<ul class="org-ul">
+<li><span class="underline"><b>Entomb</b></span>: Seal a creature within ice for the next month. This only takes effect if they fail a constitution saving throw (DC 18). During this time, they drop to one health, but do not die and are conscious of the events around them. Entomb instantly kills fire-based creatures. <i>Huge creatures cannot be entombed</i>.</li>
+<li><span class="underline"><b>Hurricane</b></span>: Create a hurricane in any place that <i>you have been before</i>. The hurricane lasts for ten turns and deals d10 ice / force damage per turn to all people who fail a constitution saving throw. Its radius is 500 feet. If a creature is damaged by the hurricane twice in a row, they also take the preceding turn&rsquo;s damage.</li>
+</ul>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-12 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-07-30 Sun 20:26</p>
+<p class="date">Created: 2023-09-08 Fri 14:09</p>
 </div>
 </body>
 </html>
