--- a/dm-materials/dm.html
+++ b/dm-materials/dm.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-04 Mon 14:55 -->
+<!-- 2023-09-08 Fri 13:38 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>DM Resources</title>
@@ -202,22 +202,22 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgd85955b">1. Campaign DM Scripts</a></li>
-<li><a href="#org09f5ba1">2. Enemies</a></li>
-<li><a href="#orgc4556a0">3. Campaigns</a></li>
-<li><a href="#org26b3133">4. Guides</a></li>
+<li><a href="#orgbf53d4b">1. Campaign DM Scripts</a></li>
+<li><a href="#org1a9a603">2. Enemies</a></li>
+<li><a href="#org4fd78d2">3. Campaigns</a></li>
+<li><a href="#org6a401a1">4. Guides</a></li>
 </ul>
 </div>
 </div>
 <hr />
-<div id="outline-container-orgd85955b" class="outline-2">
-<h2 id="orgd85955b"><span class="section-number-2">1.</span> <a href="scripts/scripts.html#ID-18a96883-cc40-409c-9fb5-80d5ab0c8379">Campaign DM Scripts</a></h2>
+<div id="outline-container-orgbf53d4b" class="outline-2">
+<h2 id="orgbf53d4b"><span class="section-number-2">1.</span> <a href="scripts/scripts.html#ID-18a96883-cc40-409c-9fb5-80d5ab0c8379">Campaign DM Scripts</a></h2>
 </div>
-<div id="outline-container-org09f5ba1" class="outline-2">
-<h2 id="org09f5ba1"><span class="section-number-2">2.</span> <a href="enemies/enemies.html#ID-69fc67b6-3d4a-451e-ab1e-e23bc20215ba">Enemies</a></h2>
+<div id="outline-container-org1a9a603" class="outline-2">
+<h2 id="org1a9a603"><span class="section-number-2">2.</span> <a href="enemies/enemies.html#ID-69fc67b6-3d4a-451e-ab1e-e23bc20215ba">Enemies</a></h2>
 </div>
-<div id="outline-container-orgc4556a0" class="outline-2">
-<h2 id="orgc4556a0"><span class="section-number-2">3.</span> Campaigns</h2>
+<div id="outline-container-org4fd78d2" class="outline-2">
+<h2 id="org4fd78d2"><span class="section-number-2">3.</span> Campaigns</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
 <li><a href="c0/c0.html#ID-ccf4874d-a608-4195-ab9b-5364d484cf20">Campaign 0</a></li>
@@ -225,12 +225,11 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-org26b3133" class="outline-2">
-<h2 id="org26b3133"><span class="section-number-2">4.</span> Guides</h2>
+<div id="outline-container-org6a401a1" class="outline-2">
+<h2 id="org6a401a1"><span class="section-number-2">4.</span> Guides</h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="damage-guide.html#ID-23919bd5-7bb0-4743-ae81-f07566ccd236">Damage Guide</a></li>
-<li><a href="../guides/spell-index.html#ID-b1b752cb-445c-4902-999d-443c83d5113a">Spell Index</a></li>
 <li><a href="../guides/alchemy-index.html#ID-f10dc3fb-122b-4842-8b68-22aa974d9a57">Alchemy Index</a></li>
 <li><a href="../guides/druid-circles.html#ID-628c4f0e-762b-428b-9a2c-03f97bb24737">Druid Circles</a></li>
 <li><a href="material-guide.html#ID-23919bd5-7bb0-4743-ae81-f07566cad236">Material Guide</a></li>
@@ -242,7 +241,7 @@
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-25 Tue 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-09-04 Mon 14:55</p>
+<p class="date">Created: 2023-09-08 Fri 13:38</p>
 </div>
 </body>
 </html>
