--- a/player_introduction.html
+++ b/player_introduction.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-08-10 Thu 20:07 -->
+<!-- 2023-09-08 Fri 13:29 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Player Introduction</title>
@@ -202,13 +202,14 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgfb4d33b">1. Character Setup Steps</a>
+<li><a href="#org4f37024">1. Character Setup Steps</a>
 <ul>
-<li><a href="#org5a9b29f">1.1. Pick a Race </a></li>
-<li><a href="#org5de3ca4">1.2. Pick a Class </a></li>
-<li><a href="#org743f8f2">1.3. Roll dice to determine ability scores</a></li>
-<li><a href="#org16246ba">1.4. Pick your starting gear</a></li>
-<li><a href="#orgd6bfd33">1.5. Create a background for your character</a></li>
+<li><a href="#orga3347e6">1.1. Pick a Race </a></li>
+<li><a href="#org85450bb">1.2. Pick a Class </a></li>
+<li><a href="#orgbd9f23d">1.3. Roll dice to determine ability scores</a></li>
+<li><a href="#org07bd3c6">1.4. Pick your starting gear</a></li>
+<li><a href="#orgb71efae">1.5. Create a background for your character</a></li>
+<li><a href="#orgba46471">1.6. Submit Character Sheet to DM</a></li>
 </ul>
 </li>
 </ul>
@@ -228,15 +229,15 @@ Hello! This is going to be a lot at first, sorry about that. I&rsquo;ve simplifi
 Please print (or electronically complete) the <b>blank character</b> sheet included here. Be sure to check the <b>reference character</b> sheet if you feel lost, or just reach out to me and I can help out.
 </p>
 
-<div id="outline-container-orgfb4d33b" class="outline-2">
-<h2 id="orgfb4d33b"><span class="section-number-2">1.</span> Character Setup Steps</h2>
+<div id="outline-container-org4f37024" class="outline-2">
+<h2 id="org4f37024"><span class="section-number-2">1.</span> Character Setup Steps</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 Complete these five steps and you&rsquo;ll be ready to play your first adventure. Have fun customizing your character, and good luck!
 </p>
 </div>
-<div id="outline-container-org5a9b29f" class="outline-3">
-<h3 id="org5a9b29f"><span class="section-number-3">1.1.</span> Pick a <a href="races.html#ID-e6b25898-e7dd-4444-b332-ef9fc3ea59bf">Race</a> <sup><a id="fnr.1" class="footref" href="#fn.1" role="doc-backlink">1</a></sup></h3>
+<div id="outline-container-orga3347e6" class="outline-3">
+<h3 id="orga3347e6"><span class="section-number-3">1.1.</span> Pick a <a href="races.html#ID-e6b25898-e7dd-4444-b332-ef9fc3ea59bf">Race</a> <sup><a id="fnr.1" class="footref" href="#fn.1" role="doc-backlink">1</a></sup></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 Please pick something you&rsquo;d like to role play as in a long running story, not just a character with the best stats. Each class will have a description of their advantages, disadvantages, class abilities, and other details about a given race in the universe.
@@ -247,8 +248,8 @@ Please complete the instructions on the race sheet to select your race and set y
 </p>
 </div>
 </div>
-<div id="outline-container-org5de3ca4" class="outline-3">
-<h3 id="org5de3ca4"><span class="section-number-3">1.2.</span> Pick a <a href="classes/classes.html#ID-69ef1740-156a-4e42-9493-49ec80a4ac26">Class</a> <sup><a id="fnr.2" class="footref" href="#fn.2" role="doc-backlink">2</a></sup></h3>
+<div id="outline-container-org85450bb" class="outline-3">
+<h3 id="org85450bb"><span class="section-number-3">1.2.</span> Pick a <a href="classes/classes.html#ID-69ef1740-156a-4e42-9493-49ec80a4ac26">Class</a> <sup><a id="fnr.2" class="footref" href="#fn.2" role="doc-backlink">2</a></sup></h3>
 <div class="outline-text-3" id="text-1-2">
 <p>
 Similarly, please pick something you&rsquo;d like to role play as in a long running story, not just the easiest class to fight with. There are many other important parts of the game to consider! Each class also has a set of subclasses that can help you specialize your character. All characters will start at level 1 and will gain all level 1 abilities when the character is created.
@@ -259,8 +260,8 @@ Please complete the instructions on the class sheet to select your class and sub
 </p>
 </div>
 </div>
-<div id="outline-container-org743f8f2" class="outline-3">
-<h3 id="org743f8f2"><span class="section-number-3">1.3.</span> Roll dice to determine ability scores</h3>
+<div id="outline-container-orgbd9f23d" class="outline-3">
+<h3 id="orgbd9f23d"><span class="section-number-3">1.3.</span> Roll dice to determine ability scores</h3>
 <div class="outline-text-3" id="text-1-3">
 <p>
 You&rsquo;d think this would be uncomplicated. Its not. Sorry. Please keep your character sheet handy and follow along to set your ability scores.
@@ -375,14 +376,14 @@ Your speed is 30 to start
 </p>
 </div>
 </div>
-<div id="outline-container-org16246ba" class="outline-3">
-<h3 id="org16246ba"><span class="section-number-3">1.4.</span> Pick your starting gear</h3>
+<div id="outline-container-org07bd3c6" class="outline-3">
+<h3 id="org07bd3c6"><span class="section-number-3">1.4.</span> Pick your starting gear</h3>
 <div class="outline-text-3" id="text-1-4">
 <p>
 Select your equipment based on various difficulty levels. Don&rsquo;t worry, this gear will quickly be replaced, but it should get you to level 3 easily. Record these values in their appropriate places on your character sheet.
 </p>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
-<caption class="t-above"><span class="table-number">Table 2:</span> Warrior / Monk Loadout Selection</caption>
+<caption class="t-above"><span class="table-number">Table 2:</span> Warrior Loadout Selection</caption>
 
 <colgroup>
 <col  class="org-left" />
@@ -425,7 +426,50 @@ Select your equipment based on various difficulty levels. Don&rsquo;t worry, thi
 </tbody>
 </table>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
-<caption class="t-above"><span class="table-number">Table 3:</span> Wizard / Sorcerer / Druid / Warlock Loadout Selection</caption>
+<caption class="t-above"><span class="table-number">Table 3:</span> Paladin Loadout Selection</caption>
+
+<colgroup>
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+</colgroup>
+<thead>
+<tr>
+<th scope="col" class="org-left">Category</th>
+<th scope="col" class="org-left">Easy Loadout</th>
+<th scope="col" class="org-left">Recommended Loadout</th>
+<th scope="col" class="org-left">Challenge Loadout</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="org-left">Armor</td>
+<td class="org-left">Iron Plate Armor: 15 AC</td>
+<td class="org-left">Rusted Studded Leather Armor: 12 AC</td>
+<td class="org-left">Cassock 10 AC</td>
+</tr>
+
+<tr>
+<td class="org-left">Weapon</td>
+<td class="org-left">Iron Greatsword 2d6 / slashing (PROF + STR)</td>
+<td class="org-left">Iron Mace 1d6 / bludgeoning (PROF + STR)</td>
+<td class="org-left">Wooden Club 1d4 (PROF + STR)</td>
+</tr>
+
+<tr>
+<td class="org-left">Bonus Items</td>
+<td class="org-left">One Priest&rsquo;s Pack, Holy Symbol, One full-health potion</td>
+<td class="org-left">Holy Symbol</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+</tbody>
+</table>
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+<caption class="t-above"><span class="table-number">Table 4:</span> Wizard / Sorcerer / Druid Loadout Selection</caption>
 
 <colgroup>
 <col  class="org-left" />
@@ -461,14 +505,14 @@ Select your equipment based on various difficulty levels. Don&rsquo;t worry, thi
 
 <tr>
 <td class="org-left">Bonus Items</td>
-<td class="org-left">One set of tools, One spell slot refill potion</td>
-<td class="org-left">One spell slot refill potion</td>
-<td class="org-left">One spell slot refill potion</td>
+<td class="org-left">One set of tools, One minor spell slot refill potion</td>
+<td class="org-left">One minor spell slot refill potion</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 </tbody>
 </table>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
-<caption class="t-above"><span class="table-number">Table 4:</span> Bard / Merchant / Prophet</caption>
+<caption class="t-above"><span class="table-number">Table 5:</span> Bard / Merchant / Prophet</caption>
 
 <colgroup>
 <col  class="org-left" />
@@ -511,7 +555,7 @@ Select your equipment based on various difficulty levels. Don&rsquo;t worry, thi
 </tbody>
 </table>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
-<caption class="t-above"><span class="table-number">Table 5:</span> Rogue Loadout Selection</caption>
+<caption class="t-above"><span class="table-number">Table 6:</span> Rogue Loadout Selection</caption>
 
 <colgroup>
 <col  class="org-left" />
@@ -541,8 +585,8 @@ Select your equipment based on various difficulty levels. Don&rsquo;t worry, thi
 <tr>
 <td class="org-left">Weapon</td>
 <td class="org-left">Steel shortsword 1d8 / slashing</td>
+<td class="org-left">Wood longbow - 1d6 piercing (DEX + STR) + 10 Wood arrows</td>
 <td class="org-left">Shank - 1d6 / slashing + piercing (PROF + DEX)</td>
-<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
@@ -553,56 +597,21 @@ Select your equipment based on various difficulty levels. Don&rsquo;t worry, thi
 </tr>
 </tbody>
 </table>
-<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
-<caption class="t-above"><span class="table-number">Table 6:</span> Ranger Loadout Selection</caption>
-
-<colgroup>
-<col  class="org-left" />
-
-<col  class="org-left" />
-
-<col  class="org-left" />
-
-<col  class="org-left" />
-</colgroup>
-<thead>
-<tr>
-<th scope="col" class="org-left">Category</th>
-<th scope="col" class="org-left">Easy Loadout</th>
-<th scope="col" class="org-left">Recommended Loadout</th>
-<th scope="col" class="org-left">Challenge Loadout</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td class="org-left">Armor</td>
-<td class="org-left">Leather armor: 11 AC</td>
-<td class="org-left">Leather armor: 11 AC</td>
-<td class="org-left">No armor: 10 AC</td>
-</tr>
-
-<tr>
-<td class="org-left">Weapon</td>
-<td class="org-left">Wood longbow - 1d6 piercing (DEX + STR) + 10 Wood arrows</td>
-<td class="org-left">Wood longbow - 1d6 piercing (DEX + STR) + 10 Wood arrows</td>
-<td class="org-left">Wood longbow - 1d6 piercing (DEX + STR) + 10 Wood arrows</td>
-</tr>
-
-<tr>
-<td class="org-left">Bonus Items</td>
-<td class="org-left">Iron shortsword - 1d6 / slashing (PROF + STR)</td>
-<td class="org-left">&#xa0;</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-</tbody>
-</table>
 </div>
 </div>
-<div id="outline-container-orgd6bfd33" class="outline-3">
-<h3 id="orgd6bfd33"><span class="section-number-3">1.5.</span> Create a background for your character</h3>
+<div id="outline-container-orgb71efae" class="outline-3">
+<h3 id="orgb71efae"><span class="section-number-3">1.5.</span> Create a background for your character</h3>
 <div class="outline-text-3" id="text-1-5">
 <p>
 This part is all up to you. Who do you want to be in this world?
+</p>
+</div>
+</div>
+<div id="outline-container-orgba46471" class="outline-3">
+<h3 id="orgba46471"><span class="section-number-3">1.6.</span> Submit Character Sheet to DM</h3>
+<div class="outline-text-3" id="text-1-6">
+<p>
+Once its complete, send your character sheet to your DM so that they can help you complete any missing portions of your sheet and set up for your first adventure!
 </p>
 <hr />
 </div>
@@ -650,7 +659,7 @@ Glossary: <a href="glossary.html#ID-a3719559-2b06-443a-b75a-96c9aa3f3b26">Charis
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-03 Mon 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-08-10 Thu 20:07</p>
+<p class="date">Created: 2023-09-08 Fri 13:29</p>
 </div>
 </body>
 </html>
